phase 2 completed before session.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,9 +13,10 @@
 <body ng-app="hello" ng-cloak class="ng-cloak">
 	<div ng-controller="navigation as nav" class="container">
 		<ul class="nav nav-pills" role="tablist">
-			<li class="active"><a href="#/">home</a></li>
-			<li><a href="#/login">login</a></li>
-			<li ng-show="authenticated"><a href="" ng-click="nav.logout">logout</a></li>
+			<li ng-class="{active:nav.tab('home')}"><a href="#/">home</a></li>
+			<li ng-class="{active:nav.tab('navigation')}"><a href="#/login">login</a></li>
+			<li ng-show="authenticated"><a href="" ng-click="nav.logout()">logout</a></li>
+		</ul>
 		</ul>
 	</div>
 	<div ng-view class="container"></div>
